modules/vpc/nat_gateway.tf

# locals {
#   nat_gateway_availability_zones = var.nat_gateway_redundancy_enabled ? data.aws_availability_zones.availability_zones.names : [data.aws_availability_zones.availability_zones.names[0]]
# }

locals {
  # var.nat_gateway_redundancy_enabled がtrueだったらNAT Gatewayを3AZ分散、
  # falseだったらNAT Gatewayを単一AZに存在するよう修正
  from_az_to_public_subnet_id = var.nat_gateway_redundancy_enabled ? {
    for cidr in keys(aws_subnet.public_subnets) : aws_subnet.public_subnets[cidr].tags["AvailabilityZone"] => aws_subnet.public_subnets[cidr].id
  } : {
    for cidr in [keys(aws_subnet.public_subnets)[0]] : aws_subnet.public_subnets[cidr].tags["AvailabilityZone"] => aws_subnet.public_subnets[cidr].id
  }
}

resource "aws_eip" "eips" {
  for_each = local.from_az_to_public_subnet_id
  vpc = true

  tags = {
    Name = "${var.service_name}-${var.env}-${each.key}-eip"
    ServiceName = var.service_name
    AvailabilityZone = each.key
    Usage = "NAT"
  }
}


resource "aws_nat_gateway" "nat_gateways" {
  for_each = local.from_az_to_public_subnet_id
  allocation_id = aws_eip.eips[each.key].allocation_id
  subnet_id = each.value

  tags = {
    Name = "${var.service_name}-${var.env}-${each.key}-nat-gateway"
    ServiceName = var.service_name
    AvailabilityZone = each.key
  }
}
